--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,30 +1,43 @@
-.Header {
-  position: fixed;
-  max-width: 100vw;
-  display: flex;
-  margin: auto;
-  width: 100%;
-  justify-content: center;
-  flex-wrap: wrap;
-  z-index: 10;
-  /*text-shadow: 1px 1px #ecf0f1, -1px -1px #ecf0f1, 1px -1px #ecf0f1, -1px 1px #ecf0f1;*/
-  border-bottom: 1px solid white;
-  background-color: rgba(255, 255, 255, 0.8);
-}
-
-.menulink {
-  padding: 10px 30px;
-  font-size: 15px;
-  opacity: 0
-}
+/*.Header {*/
+  /*position: fixed;*/
+  /*max-width: 100vw;*/
+  /*display: flex;*/
+  /*margin: auto;*/
+  /*width: 100%;*/
+  /*justify-content: center;*/
+  /*flex-wrap: wrap;*/
+  /*z-index: 10;*/
+  /*!*text-shadow: 1px 1px #ecf0f1, -1px -1px #ecf0f1, 1px -1px #ecf0f1, -1px 1px #ecf0f1;*!*/
+  /*border-bottom: 1px solid white;*/
+  /*background-color: rgba(255, 255, 255, 0.8);*/
+/*}*/
 
 @media screen and (max-width: 500px) {
   .Header a {
     font-size: 10px;
     padding: 10px;
   }
+
+  #AnimatedMenu {
+    display: none !important;
+  }
 }
 
-.azogonkiem {
-  font-size: 1em
+#AnimatedMenu {
+    max-width: 900px;
+    margin: auto;
+    display: block;
 }
+
+.AnimatedMenu-animation {
+    display: flex;
+    max-width: 900px;
+    margin: auto;
+    justify-content: space-between;
+    padding-top: 35px;
+}
+
+.AnimatedMenu__Link {
+
+}
+
