--- a/src/components/Home/Blog/index.css
+++ b/src/components/Home/Blog/index.css
@@ -27,6 +27,10 @@
     text-shadow: 2px 2px white;
 }
 
+#bloglink__text h2 {
+    text-align: center;
+}
+
 #bloglink__text {
     padding:20px;
     background-color: rgba(255,255,255,0.7);
