--- a/src/components/Home/Book/book.css
+++ b/src/components/Home/Book/book.css
@@ -44,11 +44,11 @@ a {
 /* basic grid, only for this demo */
 
 .align {
-	clear: both;
-	margin: 90px auto 20px;
-	width: 100%;
-	max-width: 1170px;
-	text-align: center;
+	/*clear: both;*/
+	/*margin: 20px auto 20px;*/
+	/*width: 100%;*/
+	/*max-width: 1170px;*/
+	/*text-align: center;*/
 }
 
 .align > li {
