--- a/src/components/Home/Contact/index.css
+++ b/src/components/Home/Contact/index.css
@@ -2,6 +2,17 @@
     padding: 20px;
 }
 
+#contact .icons {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    height: 40px
+}
+
+.icons a:hover {
+    opacity: 0.7;
+}
+
 form {
     font-family: 'Press Start 2P', Arial, Helvetica, sans-serif;
     max-width: 400px;
