--- a/src/components/Home/Home/MamaNiunika.css
+++ b/src/components/Home/Home/MamaNiunika.css
@@ -1,34 +1,52 @@
-.home {
- display: block;
-  max-width: 100vw;
+#home {
+  display: block;
 }
 
-.MamaNiunika--img,
+#home .container {
+  position: relative;
+}
+
+#typed {
+  width: auto;
+  position: relative;
+  padding-top: 100px;
+  padding-left: 10%;
+  /*max-width: 900px;*/
+  font-family: "Press Start 2P";
+  font-size: 30px;
+  min-height: 90px;
+  overflow: visible;
+}
+
+.heroes-animation--img,
 .MamaNiunika--circle-container {
   opacity: 0;
   overflow: hidden;
 }
 
 .MamaNiunika {
-  position: absolute;
+  width: 100%;
+  position: relative;
 }
 
-.MamaNiunika--img {
-  position: absolute;
-  top: 40px;
-  right: 20px;
+.heroes-animation--img {
+  /*margin: auto;*/
+  /*width: 100%;*/
+  /*position: relative;*/
+  /*top: 40px;*/
+  /*right: 20px;*/
   z-index: 2;
-  padding: 0;
-  list-style: none;
+  /*padding: 0;*/
+  /*list-style: none;*/
+  /*display: flex;*/
+  width: 100%;
 }
 
-.MamaNiunika--img img {
+.heroes-animation--img img {
   width: auto;
   margin: auto;
-  top: 0;
-  left: 40px;
-  right: 0;
   bottom: 0;
+  max-width: 100%;
 }
 
 .MamaNiunika--circle {
