--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -1,7 +1,7 @@
 /*@import url("fonts.css");*/
 /*@import url('https://fonts.googleapis.com/css?family=Press Start 2P|Share+Tech+Mono&subset=latin-ext');*/
 /*@import url('https://fonts.googleapis.com/css?family=Press Start 2P|Source+Code+Pro&subset=latin-ext');*/
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P|Source+Code+Pro&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Press+Start+2P|Source+Code+Pro&subset=latin-ext');
 
 
 :root {
@@ -13,7 +13,8 @@
 }
 
 body {
-    font-family: 'Press Start 2P', Fallback, sans-serif;
+    font-family: 'Roboto Slab', Fallback, sans-serif;
+    /*font-family: 'Press Start 2P', Fallback, sans-serif;*/
     color: var(--main-color);
 }
 home, body {
@@ -21,11 +22,7 @@ home, body {
     padding: 0;
 }
 section {
-    /*padding-top: 1em;*/
     min-height: 100vh;
-/*}*/
-/**/
-/*section .content {*/
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -36,17 +33,32 @@ section > h1, section > div {
     margin-top: 50px
 }
 
+h1, h2, h3, h4, h5, h6 {
+    /*font-family: 'Press Start 2P', Fallback, sans-serif;*/
+    color: #2081e7;
+}
+
+.color-inverse h1,
+.color-inverse h2,
+.color-inverse h3,
+.color-inverse h4,
+.color-inverse h5,
+.color-inverse h6 {
+    color: #d3d3d3;
+}
+
 section {
     padding-bottom: 100px;
 }
 
 p, ul {
+    font-weight: 300;
     font-size: 18px;
-    font-family: Source Code Pro, sans-serif;
+    /*font-family: Source Code Pro, sans-serif;*/
 }
 
 .page-title {
-    font-family: Source Code Pro;
+    /*font-family: Source Code Pro;*/
     font-size: 3em;
     padding-top: 60px;
     margin-left: 20px;
@@ -74,6 +86,8 @@ p, ul {
 }
 
 .grid-to-animate {
+    max-width: 900px;
+    margin: auto;
     display: block;
 }
 
